recursion.logo.lessons.recursion.logo.square.FourSquare.scala.error
FourSquare:3: error: value avance is not a member of Int
possible cause: maybe a semicolon is missing before `value avance'?
  avance(x);
  ^FourSquare:3: error: not found: value x
  avance(x);
         ^